--- a/index.html
+++ b/index.html
@@ -119,22 +119,28 @@
 			
 			<div class="row">
 				<div class="col-md-4">
-					<div class="gtco-video gtco-video-sm gtco-bg" style="background-image: url(images/벤치마크\ 썸네일.png); ">
-						<a href="video/스마트폰.mp4" muted controlsList="nodownload" class="popup-vimeo"><i class="icon-video"></i></a>
-						<div class="overlay"></div>
+					
+					<div class="gtco-video-sm" >
+					<video class="gtco-video gtco-video-sm gtco-bg" src="video/스마트폰.mp4"  muted controls poster="images/명함-정리.png"></video>
+					</div>
+
+				</div>
+
+				<div class="col-md-4">
+
+					<div class="gtco-video-sm" >
+						<video class="gtco-video gtco-video-sm gtco-bg" src="video/박윤혁-향수광고(제출+인트로).mp4"  muted controls poster="images/향수광고\ 썸네일.png"></video>
 					</div>
 				</div>
+
+
 				<div class="col-md-4">
-					<div class="gtco-video gtco-video-sm gtco-bg" style="background-image: url(images/향수광고\ 썸네일.png); ">
-						<a href="video/박윤혁-향수광고(제출+인트로).mp4" muted controlsList="nodownload" class="popup-vimeo"><i class="icon-video"></i></a>
-						<div class="overlay"></div>
+
+					<div class="gtco-video-sm" >
+						<video class="gtco-video gtco-video-sm gtco-bg" src="video/박윤혁-자기소개영상.mp4"  muted controls poster="images/자기소개썸네일.png"></video>
 					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="gtco-video gtco-video-sm gtco-bg" style="background-image: url(images/자기소개썸네일.png); ">
-						<a href="video/박윤혁-자기소개영상.mp4" muted controlsList="nodownload" class="popup-vimeo"><i class="icon-video"></i></a>
-						<div class="overlay"></div>
-					</div>
+
+					
 				</div>
 			
 			</div>
